--- a/style.css
+++ b/style.css
@@ -18,4 +18,5 @@ h1.header {
     background-image: url('bg.jpg');
     background-size:100% 100%;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
